partman (37) UNRELEASED; urgency=low

  * Anton Zinoviev
    - init.d/parted: move the old device directories in old_devices
      directory.  Return back in /var/lib/parted/devices only the
      necessary of them.

 -- Anton Zinoviev <zinoviev@debian.org>  Sat,  8 May 2004 19:52:49 +0300

partman (36) unstable; urgency=low

  * Joey Hess
    - Use substvars to get a usual libc6 dependency, libc6-udeb's provide will
      work with this since libd-i does not do version checking. libc-udeb,
      which was depended on, is no longer in unstable.
    - Provide created-fstab, moved here from partman-target.
  * Martin Michlmayr
    - Really exit 10 on backup from main partitioning menu. Closes: #242677
    - Print RAID devices as "RAIDx device #y" (x = RAID type, y = number).
    - Print LVM1 and LVM2 devices as "LVM VG %s, LV %s".
  * Stephen R. Marenka
    - Add support for q40 and sun(x) m68k subarchs.
  
 -- Joey Hess <joeyh@debian.org>  Mon, 26 Apr 2004 22:25:50 -0400

partman (35) unstable; urgency=low

  * Thiemo Seufer
    - Fix architecture check in debian/rules.

 -- Martin Michlmayr <tbm@cyrius.com>  Sun, 02 May 2004 15:45:15 +0100

partman (34) unstable; urgency=low

  * Updated translations: 
    - Italian (it.po) by Stefano Canepa
    - Bokmal, Norwegian (nb.po) by Bjørn Steensrud
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Slovenian (sl.po) by Jure Čuhalev

 -- Joey Hess <joeyh@debian.org>  Fri, 23 Apr 2004 13:11:51 -0400

partman (33) unstable; urgency=low

  * Joey Hess
    - Work around bug #243373 by using ">" instead of a NBSP if the
      terminal is not bterm (or xterm). ">" was chosen somewhat arbitrarily
      as looking reasonably ok.
  * Updated translations: 
    - Finnish (fi.po) by Tapio Lehtonen
    - Romanian (ro.po) by Eddy Petrisor

 -- Joey Hess <joeyh@debian.org>  Wed, 21 Apr 2004 16:32:21 -0400

partman (32) unstable; urgency=low

  * Joey Hess
    - Exit 10 on backup from main partitioning menu. Closes: #242677