@@ -1,0 +1,11 @@
+#!/bin/sh
+
+case "`archdetect`" in
+	# parted does not properly edit dvh disk labels
+	mips/r4k-ip22 | mips/r5k-ip22)
+		return 1
+		;;
+	*)
+		return 0;
+esac
+
