@@ -4,6 +4,9 @@ partman (37) UNRELEASED; urgency=low
     - init.d/parted: move the old device directories in old_devices
       directory.  Return back in /var/lib/parted/devices only the
       necessary of them.
+  * Martin Michlmayr
+    - Don't use partman for SGI machines at all, but use it for other
+      mips machines.
 
  -- Anton Zinoviev <zinoviev@debian.org>  Sat,  8 May 2004 19:52:49 +0300
 
